welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: reassignment to val
if (getCouleurSol=Color.green)
                 ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
do {
^